apps/backend/envs/aws-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-be-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ecommerce
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:291559603642:certificate/5099bfd8-4951-415a-b33a-bf3079439430
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: ecommerce-k8s-api.projects.jovanovski.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ecommerce-be-service
                port:
                  number: 80
